<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/place"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/CardView.Dark"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:cardCornerRadius="18dp"
        tools:cardElevation="5dp"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="2dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/gradient"
            android:src="@drawable/gradient" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/_10"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@+id/textView3"
                android:text="@string/name_of_currency"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />

            <ImageView
                android:id="@+id/cryptoicon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/icon_of_the_crypto"
                android:padding="7dp"
                android:src="#888888" />

            <TextView
                android:id="@+id/capita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="17dp"
                android:text="@string/amount_in_dollar"
                android:textColor="@color/white"
                android:textSize="26sp" />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>